--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,20 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "fideloper/proxy": "^4.0",
+        "php": "^7.4|^8.0",
+        "fideloper/proxy": "^4.4",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/framework": "^8.0",
+        "laravel/helpers": "^1.4",
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.2",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "classmap": [
